<resources>
    <string name="app_name">BaseModule</string>

    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_micro">微头条</string>
    <string name="tab_me">我的</string>


    <string name="ok">确定</string>
    <string name="auth_ok">验证通过</string>
    <string name="btn_cancel">取消</string>
    <string name="text_retry">再试一次</string>

    <string name="log_info_failed">指纹识别失败，请重试！</string>
    <string name="log_info_error">指纹识别错误，等待几秒之后再重试</string>
    <string name="log_info_start">指纹识别已经开启，长按指纹解锁键</string>
    <string name="toast_text_retry_to">再试一次，通过指纹键验证已有手机指纹</string>

    <string name="toast_text_retry_to_much">尝试次数过多，请稍后尝试</string>
    <string name="toast_text_retry_to_much_lock">尝试次数过多，设备暂时锁定</string>

    <string name="finger_info_text">通过识别设备验证已有手机指纹</string>
    <string name="finger_info_verify_failed">Touch ID 验证失败</string>
    <string name="finger_info_error_retry_count_format">纹不匹配，还可尝试%d次</string>
    <string name="finger_info_error_un_support">此设备不支持指纹识别功能，请更换设备！</string>
    <string name="finger_info_error_un_get_fingerprint">此设备未录入指纹，请先录入！</string>
    <string name="finger_info_error_un_fingerprint">此设备指纹录入异常，请重新录入！</string>

</resources>
